# ideas_tg_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
bot/: config.py  database.py  handlers.py  main.py
